# lion-cpp

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake.yml  cmake_macos.yml  cmake_macos_nightly.yml  cmake_nightly.yml  cmake_windows.yml  codecov_linux.yml
cmake/: Findblaslapack.cmake  Findcppad.cmake  Findcppcodec.cmake  Findhdf5.cmake  Findipopt.cmake  Findloggercpp.cmake  Findmatplotlibcpp.cmake  Findnlohmann_json.cmake  Findtinyxml2.cmake  Findzstd.cmake  compilerflags.cmake  get-third-party.cmake
cmake/patch/: ipopt.patch
lion/foundation/: constants.h  lion_exception.h  string_helpers.h  tuple_helpers.h  type_traits.h  types.h  utils.h  utils.hpp
lion/frame/: frame.h  frame.hpp  rotations.h  rotations.hpp
lion/io/: Xml_document.h  Xml_element.h  Xml_element.hpp  database_parameters.h  document.h  document_element.h  progress_bar.h
lion/math/: CMakeLists.txt  basic_root_solvers.h  check_optimality.h  check_optimality.hpp  euler_angles.h  fsolve_trust_region_dodleg.h  interpolate.hpp  ipopt_cppad_handler.hpp  ipopt_generic_nlp_interface.h  ipopt_handler.h  ipopt_handler.hpp  ipopt_nlp_complete_output.h  ipopt_optimize_nlp_cppad.h  ipopt_optimize_nlp_finite_differences.h  ipopt_solve_nonlinear_system.h  legendre_algorithms.h  legendre_algorithms.hpp  linear_algebra.h  matrix3x3.h  matrix3x3.hpp  matrix_extensions.h  matrix_extensions.hpp  mumps_interface.h  newton_method.h  newton_method.hpp  optimise.h  optimise.hpp  optimization_result.h  optimize_ipopt_finite_differences.h  polynomial.h  polynomial.hpp  polynomial_piecewise.h  polynomial_piecewise.hpp  sensitivity_analysis.h  sensitivity_analysis.hpp  sensitivity_analysis_slow.h  sensitivity_analysis_slow.hpp  small_dense_inverse_matrices.h  solve_nonlinear_system.h  solve_nonlinear_system.hpp  (+2 more)
lion/math/detail/: ipopt_nlp_cppad.h  ipopt_nlp_finite_differences.h
lion/propagators/: crank_nicolson.h  explicit_euler.h  explicit_euler.hpp  ode45.h  ode45.hpp  rk4.h  rk4.hpp
test/: CMakeLists.txt
test/foundation/: lion_exception_test.cpp  tuple_helpers_test.cpp  utils_test.cpp
test/frame/: generic_position_velocity_test.cpp  inertial_frame_test.cpp  rolling_disk_test.cpp  rotations_matrices_test.cpp  rotations_test.cpp
test/io/: database_parameters_test.cpp  xml_test.cpp
test/io/data/: example.xml  example2.xml
test/math/: basic_root_solvers_test.cpp  check_optimality_test.cpp  fsolve_trust_region_dodleg_test.cpp  ipopt_cppad.cpp  ipopt_cppad_handler_test.cpp  ipopt_optimize_NLP_finite_differences_test.cpp  ipopt_optimize_finite_differences_test.cpp  ipopt_optimize_with_cppad_test.cpp  legendre_algorithms_test.cpp  linear_algebra_test.cpp  matrix_extensions.cpp  mumps_interface_test.cpp  optimise_test.cpp  polynomial_piecewise_test.cpp  polynomial_test.cpp  sensitivity_analysis_test.cpp  small_dense_inverse_matrices_test.cpp  type_traits_test.cpp
test/math/data/: small_dense_inverse_matrices.xml
test/propagators/: armonic_oscillator.h  crank_nicolson_test.cpp  explicit_euler.cpp  ode45_high_initial_step.cpp  ode45_test.cpp  rk4_test.cpp
test/propagators/data/: crank_nicolson_test.xml
